# Crypto-Perps-Backtest-Engine

./: PUBLISH_INSTRUCTIONS.md  __init__.py  publish_to_github.ps1  pyproject.toml
docs/: TEST_HARNESS_FIX_REPORT.md
tests/: test_data_integrity_smoke.py
