[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-perps-backtest-engine"
version = "0.1.0"
description = "Production-grade backtesting engine for Binance USDⓈ-M Futures"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Engine Core Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/metinmertyesilyurt/Crypto-Perps-Backtest-Engine"
Documentation = "https://github.com/metinmertyesilyurt/Crypto-Perps-Backtest-Engine/docs"
Repository = "https://github.com/metinmertyesilyurt/Crypto-Perps-Backtest-Engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine_core*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

